--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".MegaQuiz"
+            android:name=".Result"
+            android:exported="true" />
+        <activity
+            android:name=".Questions"
+            android:exported="true" />
+        <activity
+            android:name=".Mega_Quiz"
             android:exported="true" />
         <activity
             android:name=".Available"
@@ -91,9 +97,6 @@
             android:exported="true" />
         <activity
             android:name=".c_program"
-            android:exported="true" />
-        <activity
-            android:name=".cppcertificate"
             android:exported="true" />
         <activity
             android:name=".CPP_Notes"
@@ -181,9 +184,6 @@
             android:exported="true" />
         <activity
             android:name=".ContactUs"
-            android:exported="true" />
-        <activity
-            android:name=".courses"
             android:exported="true" />
         <activity
             android:name=".ProfileActivity"
